--- a/src/LongManagerClient/Pages/In/InSearch.xaml
+++ b/src/LongManagerClient/Pages/In/InSearch.xaml
@@ -1,14 +1,23 @@
-﻿<Page x:Class="LongManagerClient.Pages.In.InSearch"
+﻿<pages:BasePage
+      x:Class="LongManagerClient.Pages.In.InSearch"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:pages="clr-namespace:LongManagerClient.Pages"
       xmlns:local="clr-namespace:LongManagerClient.Pages.In"
+      xmlns:wpf="clr-namespace:CefSharp.Wpf;assembly=CefSharp.Wpf"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="InSearch">
-
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="50" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <WrapPanel Grid.Row="0" Margin="24 0 0 0" VerticalAlignment="Center"></WrapPanel>
+        <DockPanel Grid.Row="1">
+            <wpf:ChromiumWebBrowser x:Name="Browser"></wpf:ChromiumWebBrowser>
+        </DockPanel>
     </Grid>
-</Page>
+</pages:BasePage>
