到达件爬取

--- a/src/LongManagerWeb/Pages/LoginHistory.cshtml
+++ b/src/LongManagerWeb/Pages/LoginHistory.cshtml
@@ -73,7 +73,7 @@
     <script src="~/lib/datatables.net-bs/js/dataTables.bootstrap.min.js"></script>
     <script type="text/javascript">
         $(function () {
-            $('#login-history').DataTable()
+            $('#login-history').DataTable();
         })
     </script>
 }
