--- a/src/LongManagerClient/MainWindow.xaml
+++ b/src/LongManagerClient/MainWindow.xaml
@@ -12,7 +12,7 @@
         Title="管理系统" Height="450" Width="800"
         TextElement.Foreground="White"
         TextElement.FontWeight="Regular"
-        TextElement.FontSize="13"
+        TextElement.FontSize="16"
         TextOptions.TextFormattingMode="Ideal" 
         TextOptions.TextRenderingMode="Auto"
         Background="{DynamicResource MaterialDesignPaper}"
@@ -38,14 +38,24 @@
             </WrapPanel>
         </DockPanel>
         <StackPanel DockPanel.Dock="Left" Width="200" Height="auto" Background="#FF9459C5">
-            <Button x:Name="IndexBtn" Margin="10" Width="auto" Height="30" Content="首页" Command="command:LongManagerClientCommands.OpenPageCommand" CommandParameter="Index"></Button>
-            <Button x:Name="FrameUserBtn" Margin="10" Width="auto" Height="30" Content="用户管理" Command="command:LongManagerClientCommands.OpenPageCommand" CommandParameter="UserList"></Button>
-            <Button x:Name="CarBtn" Margin="10" Width="auto" Height="30" Content="车辆管理" Command="command:LongManagerClientCommands.OpenPageCommand" CommandParameter="CarList"></Button>
-            <Button x:Name="LabelBtn" Margin="10" Width="auto" Height="30" Content="标签管理" Command="command:LongManagerClientCommands.OpenPageCommand" CommandParameter="LabelList"></Button>
-            <Button x:Name="OutListBtn" Margin="10" Width="auto" Height="30" Content="出口件查询" Command="command:LongManagerClientCommands.OpenPageCommand" CommandParameter="OutList"></Button>
-            <Button x:Name="OutSearchBtn" Margin="10" Width="auto" Height="30" Content="出口件爬取" Command="command:LongManagerClientCommands.OpenPageCommand" CommandParameter="OutSearch"></Button>
-            <Button x:Name="InListBtn" Margin="10" Width="auto" Height="30" Content="到达件查询" Command="command:LongManagerClientCommands.OpenPageCommand" CommandParameter="InList"></Button>
-            <Button x:Name="InSearchBtn" Margin="10" Width="auto" Height="30" Content="到达件爬取" Command="command:LongManagerClientCommands.OpenPageCommand" CommandParameter="InSearch"></Button>
+            <TreeView MinWidth="220">
+                <TreeViewItem Header="系统管理">
+                    <Button x:Name="IndexBtn" Width="auto" Height="30" Content="首页查看" Command="command:LongManagerClientCommands.OpenPageCommand" CommandParameter="Index"></Button>
+                    <Button x:Name="FrameUserBtn" Width="auto" Height="30" Content="用户管理" Command="command:LongManagerClientCommands.OpenPageCommand" CommandParameter="UserList"></Button>
+                </TreeViewItem>
+                <TreeViewItem Header="硬件管理">
+                    <Button x:Name="CarBtn"  Width="auto" Height="30" Content="车辆管理" Command="command:LongManagerClientCommands.OpenPageCommand" CommandParameter="CarList"></Button>
+                    <Button x:Name="LabelBtn" Width="auto" Height="30" Content="标签管理" Command="command:LongManagerClientCommands.OpenPageCommand" CommandParameter="LabelList"></Button>
+                </TreeViewItem>
+                <TreeViewItem Header="出口件">
+                    <Button x:Name="OutListBtn"  Width="auto" Height="30" Content="出口件查询" Command="command:LongManagerClientCommands.OpenPageCommand" CommandParameter="OutList"></Button>
+                    <Button x:Name="OutSearchBtn"  Width="auto" Height="30" Content="出口件爬取" Command="command:LongManagerClientCommands.OpenPageCommand" CommandParameter="OutSearch"></Button>
+                </TreeViewItem>
+                <TreeViewItem Header="到达件">
+                    <Button x:Name="InListBtn" Width="auto" Height="30" Content="到达件查询" Command="command:LongManagerClientCommands.OpenPageCommand" CommandParameter="InList"></Button>
+                    <Button x:Name="InSearchBtn"  Width="auto" Height="30" Content="到达件爬取" Command="command:LongManagerClientCommands.OpenPageCommand" CommandParameter="InSearch"></Button>
+                </TreeViewItem>
+            </TreeView>
         </StackPanel>
         <DockPanel DockPanel.Dock="Right" Width="auto" Height="auto">
             <Frame x:Name="PageFrame" NavigationUIVisibility="Hidden"></Frame>
