--- a/src/LongManagerClient/MainWindow.xaml
+++ b/src/LongManagerClient/MainWindow.xaml
@@ -43,6 +43,7 @@
                     <TreeViewItem Header="系统管理">
                         <Button x:Name="IndexBtn" FontSize="14" Width="auto" Height="25" Content="首页查看" Command="command:LongManagerClientCommands.OpenPageCommand" CommandParameter="Index"></Button>
                         <Button x:Name="FrameUserBtn" FontSize="14" Width="auto" Height="25" Content="用户管理" Command="command:LongManagerClientCommands.OpenPageCommand" CommandParameter="UserList"></Button>
+                        <Button x:Name="FrameConfigBtn" FontSize="14" Width="auto" Height="25" Content="参数管理" Command="command:LongManagerClientCommands.OpenPageCommand" CommandParameter="ConfigList"></Button>
                     </TreeViewItem>
                     <TreeViewItem Header="硬件管理">
                         <Button x:Name="CarBtn" FontSize="14" Width="auto" Height="25" Content="车辆管理" Command="command:LongManagerClientCommands.OpenPageCommand" CommandParameter="CarList"></Button>
