--- a/src/LongManagerClient/Pages/City/CityEdit.xaml
+++ b/src/LongManagerClient/Pages/City/CityEdit.xaml
@@ -22,19 +22,11 @@
             </WrapPanel>
             <WrapPanel Margin="10">
                 <TextBlock Text="邮局名称：" Width="100"></TextBlock>
-                <TextBox x:Name="OfficeNameTextBox" materialDesign:HintAssist.Hint="邮局名称">
-                    <TextBox.Text>
-                        <Binding Path="OfficeName"></Binding>
-                    </TextBox.Text>
-                </TextBox>
+                <TextBlock Text="{Binding OfficeName}" Width="100"></TextBlock>
             </WrapPanel>
             <WrapPanel Margin="10">
                 <TextBlock Text="所属邮局名称：" Width="100"></TextBlock>
-                <TextBox x:Name="BelongOfficeNameTextBox" materialDesign:HintAssist.Hint="所属邮局名称">
-                    <TextBox.Text>
-                        <Binding Path="BelongOfficeName"></Binding>
-                    </TextBox.Text>
-                </TextBox>
+                <TextBlock Text="{Binding BelongOfficeName}" Width="100"></TextBlock>
             </WrapPanel>
             <WrapPanel Margin="10">
                 <TextBlock Text="全国格口号：" Width="100"></TextBlock>
