--- a/src/LongManagerClient/MainWindow.xaml
+++ b/src/LongManagerClient/MainWindow.xaml
@@ -9,7 +9,7 @@
         mc:Ignorable="d" 
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:command="clr-namespace:LongManagerClient.Command"
-        Title="管理系统" Height="450" Width="800"
+        Title="" Height="450" Width="800"
         TextElement.Foreground="White"
         TextElement.FontWeight="Regular"
         TextElement.FontSize="14"
