--- a/src/LongManagerClient/Pages/JiangSuOut/JiangSuOutList.xaml
+++ b/src/LongManagerClient/Pages/JiangSuOut/JiangSuOutList.xaml
@@ -26,6 +26,7 @@
             <TextBox x:Name="TxtAddress" materialDesign:HintAssist.Hint="地址" Width="200" Margin="10"></TextBox>
             <Button x:Name="SearchBtn" Margin="10" Content="查询" IsDefault="True" Click="SearchBtn_Click"></Button>
             <Button x:Name="PositionBtn" Margin="10" Content="长三角格口划分" Click="PositionBtn_Click"></Button>
+            <Button x:Name="NoSyncBtn" Margin="10" Content="查找未同步" Click="NoSyncBtn_Click"></Button>
             <Button x:Name="SynBtn" Margin="10" Content="同步到分拣机" Click="SynBtn_Click"></Button>
         </WrapPanel>
         <DataGrid x:Name="MailDataGrid" Grid.Row="1" HorizontalAlignment="Stretch" IsReadOnly="True" AutoGenerateColumns="False"
