--- a/src/LongManagerClient/Pages/In/InList.xaml
+++ b/src/LongManagerClient/Pages/In/InList.xaml
@@ -23,8 +23,10 @@
         </Grid.RowDefinitions>
         <WrapPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Left">
             <TextBox x:Name="TxtMailNO" materialDesign:HintAssist.Hint="邮件条码" Width="200" Margin="10"></TextBox>
+            <TextBox x:Name="TxtAddress" materialDesign:HintAssist.Hint="地址" Width="200" Margin="10"></TextBox>
             <Button x:Name="SearchBtn" Margin="10" Content="查询" IsDefault="True" Click="SearchBtn_Click"></Button>
             <Button x:Name="NoSyncBtn" Margin="10" Content="查找未同步" Click="NoSyncBtn_Click"></Button>
+            <Button x:Name="MoveToHistoryBtn" Margin="10" Content="转到历史库" Click="MoveToHistoryBtn_Click"></Button>
             <Button x:Name="SynBtn" Margin="10" Content="同步到分拣机" Click="SynBtn_Click"></Button>
         </WrapPanel>
         <DataGrid x:Name="MailDataGrid" Grid.Row="1" HorizontalAlignment="Stretch" IsReadOnly="True" AutoGenerateColumns="False"
@@ -35,16 +37,6 @@
                 <DataGridTextColumn Binding="{Binding Address}"  Header="邮件地址"></DataGridTextColumn>
                 <DataGridTextColumn Binding="{Binding OrgName}" Width="100" Header="投递局"></DataGridTextColumn>
                 <DataGridTextColumn Binding="{Binding IsPush,Converter={StaticResource pushConverter}}" Header="是否同步"></DataGridTextColumn>
-                <DataGridTemplateColumn Header="手动同步">
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <Button x:Name="SyncBtn" Height="20" Tag="{Binding RowGuid}" Style="{StaticResource MaterialDesignFloatingActionMiniLightButton}"
-                                    ToolTip="再次同步" Click="SyncBtn_Click">
-                                <materialDesign:PackIcon Kind="Edit" Height="20" Width="20"/>
-                            </Button>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                </DataGridTemplateColumn>
             </DataGrid.Columns>
         </DataGrid>
         <WrapPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Left">
