--- a/src/LongManagerClient/Pages/JiangSuOut/JiangSuOutList.xaml
+++ b/src/LongManagerClient/Pages/JiangSuOut/JiangSuOutList.xaml
@@ -27,6 +27,7 @@
             <Button x:Name="SearchBtn" Margin="10" Content="查询" IsDefault="True" Click="SearchBtn_Click"></Button>
             <Button x:Name="PositionBtn" Margin="10" Content="长三角格口划分" Click="PositionBtn_Click"></Button>
             <Button x:Name="NoSyncBtn" Margin="10" Content="查找未同步" Click="NoSyncBtn_Click"></Button>
+            <Button x:Name="MoveToHistoryBtn" Margin="10" Content="转到历史库" Click="MoveToHistoryBtn_Click"></Button>
             <Button x:Name="SynBtn" Margin="10" Content="同步到分拣机" Click="SynBtn_Click"></Button>
         </WrapPanel>
         <DataGrid x:Name="MailDataGrid" Grid.Row="1" HorizontalAlignment="Stretch" IsReadOnly="True" AutoGenerateColumns="False"
@@ -40,16 +41,6 @@
                 <DataGridTextColumn Binding="{Binding CountryPosition}" Header="全国格口划分"></DataGridTextColumn>
                 <DataGridTextColumn Binding="{Binding JiangSuPosition}" Header="长三角格口划分"></DataGridTextColumn>
                 <DataGridTextColumn Binding="{Binding IsPush,Converter={StaticResource pushConverter}}" Header="是否同步"></DataGridTextColumn>
-                <DataGridTemplateColumn Header="手动同步">
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <Button x:Name="SyncBtn" Height="20" Tag="{Binding RowGuid}" Style="{StaticResource MaterialDesignFloatingActionMiniLightButton}"
-                                    ToolTip="再次同步" Click="SyncBtn_Click">
-                                <materialDesign:PackIcon Kind="Edit" Height="20" Width="20"/>
-                            </Button>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                </DataGridTemplateColumn>
             </DataGrid.Columns>
         </DataGrid>
         <WrapPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Left">
