--- a/src/LongManagerClient/MainWindow.xaml
+++ b/src/LongManagerClient/MainWindow.xaml
@@ -45,10 +45,10 @@
                         <Button x:Name="FrameUserBtn" FontSize="14" Width="auto" Height="25" Content="用户管理" Command="command:LongManagerClientCommands.OpenPageCommand" CommandParameter="UserList"></Button>
                         <Button x:Name="FrameConfigBtn" FontSize="14" Width="auto" Height="25" Content="参数管理" Command="command:LongManagerClientCommands.OpenPageCommand" CommandParameter="ConfigList"></Button>
                     </TreeViewItem>
-                    <TreeViewItem Header="硬件管理" Selected="TreeViewItem_Selected">
+                    <!--<TreeViewItem Header="硬件管理" Selected="TreeViewItem_Selected">
                         <Button x:Name="CarBtn" FontSize="14" Width="auto" Height="25" Content="车辆管理" Command="command:LongManagerClientCommands.OpenPageCommand" CommandParameter="CarList"></Button>
                         <Button x:Name="LabelBtn" FontSize="14" Width="auto" Height="25" Content="标签管理" Command="command:LongManagerClientCommands.OpenPageCommand" CommandParameter="LabelList"></Button>
-                    </TreeViewItem>
+                    </TreeViewItem>-->
                     <TreeViewItem Header="地区管理" Selected="TreeViewItem_Selected">
                         <Button x:Name="CityListBtn" FontSize="14" Width="auto" Height="25" Content="地区管理" Command="command:LongManagerClientCommands.OpenPageCommand" CommandParameter="CityList"></Button>
                     </TreeViewItem>
